# crashlog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
includes/crashlog/: address.hpp  crashlog.hpp  exception.hpp  internal.h  parser.h  parser.hpp
includes/crashlog/win64/: exception.hpp  parser.hpp  stacktrace.hpp  symbol_resolver.hpp  symbols.hpp
src/: CMakeLists.txt  address.cpp  crashlog.cpp  exception_info.cpp  exception_info.h  internal.cpp  internal.h  parser.cpp  parser.h
src/win64/: exception.cpp  parser.cpp  stacktrace.cpp  symbol_resolver.cpp  symbols.cpp
test/: CMakeLists.txt  main.cpp
